; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_connection_set_flags.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_connection_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_connection = type { i32 }

@EVHTTP_CON_REUSE_CONNECTED_ADDR = common dso_local global i32 0, align 4
@EVHTTP_CON_READ_ON_WRITE_ERROR = common dso_local global i32 0, align 4
@EVHTTP_CON_PUBLIC_FLAGS_END = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evhttp_connection_set_flags(%struct.evhttp_connection* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.evhttp_connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.evhttp_connection* %0, %struct.evhttp_connection** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* @EVHTTP_CON_REUSE_CONNECTED_ADDR, align 4
  %8 = load i32, i32* %6, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* @EVHTTP_CON_READ_ON_WRITE_ERROR, align 4
  %11 = load i32, i32* %6, align 4
  %12 = or i32 %11, %10
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %13, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @EVHTTP_CON_PUBLIC_FLAGS_END, align 4
  %21 = icmp sgt i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18, %2
  store i32 1, i32* %3, align 4
  br label %35

23:                                               ; preds = %18
  %24 = load i32, i32* %6, align 4
  %25 = xor i32 %24, -1
  %26 = load %struct.evhttp_connection*, %struct.evhttp_connection** %4, align 8
  %27 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = and i32 %28, %25
  store i32 %29, i32* %27, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load %struct.evhttp_connection*, %struct.evhttp_connection** %4, align 8
  %32 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = or i32 %33, %30
  store i32 %34, i32* %32, align 4
  store i32 0, i32* %3, align 4
  br label %35

35:                                               ; preds = %23, %22
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
